[gd_scene load_steps=6 format=2]

[ext_resource path="res://Code/item_skill.gd" type="Script" id=1]
[ext_resource path="res://Art/Placeholder/Player/fall/adventurer-fall-00.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/shop/particles_item.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 3 )

[node name="item_skill" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.4927
margin_top = -126.926
margin_right = 83.5073
margin_bottom = 23.0744
rect_min_size = Vector2( 150, 150 )
size_flags_horizontal = 5
size_flags_vertical = 5
script = ExtResource( 1 )

[node name="logo" type="TextureRect" parent="."]
margin_right = 150.0
margin_bottom = 115.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="ColorRect" type="ColorRect" parent="logo"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 150, 150 )
color = Color( 0.207843, 0.184314, 0.184314, 0.333333 )

[node name="price" type="Label" parent="."]
margin_top = 119.0
margin_right = 150.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 9
custom_fonts/font = SubResource( 1 )
text = "300"
align = 1

[node name="particles_items" parent="." instance=ExtResource( 4 )]
position = Vector2( 79.1129, 83.0407 )
emitting = false
one_shot = true
[connection signal="gui_input" from="." to="." method="_on_item_skill_gui_input"]
[connection signal="mouse_entered" from="logo" to="." method="_on_logo_mouse_entered"]
[connection signal="mouse_exited" from="logo" to="." method="_on_logo_mouse_exited"]
